# LinkedIn-Job-Automation-with-AI

./: .dockerignore  .env.example  .env.template  .gitignore  AGENT_USAGE_GUIDE.md  AUTOAGENTHIRE_COMPLETE.md  AUTOAGENTHIRE_INTEGRATION.md  AUTOAGENTHIRE_README.md  AUTOAGENTHIRE_SUCCESS.md  AUTOMATION_FIXED.md  COMPLETE_USER_GUIDE.md  CONFIGURATION_COMPLETE.md  CONTRIBUTING.md  DELIVERABLES_CHECKLIST.md  DEPLOYMENT_FIXES.md  ERRORS_FIXED_SUCCESS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATE.md  LINKEDIN_AUTOMATION_GUIDE.md  LINKEDIN_IMPLEMENTATION_COMPLETE.md  LOVABLE_FRONTEND_INTEGRATION.md  Makefile  PERFECT_AGENT_PROMPT.md  PLAYWRIGHT_ERROR_FIXED.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PROJECT_VISUALIZATION.md  QUICK_START.md  QUICK_START_AUTOAGENTHIRE.md  README.md  README_NEW.md  README_STATUS.md  README_VERCEL.md  RUNNING_NOW.md  RUNNING_STATUS.md  RUN_AGENT_SUCCESS.md  SETUP_SUCCESS.md  SETUP_SUMMARY.md  STATUS.md  (+36 more)
.github/workflows/: ci.yml
.streamlit/: config.toml
ai_models/prompts/: cover_letter_template.txt  job_analysis_prompt.txt  resume_matching_prompt.txt
alembic/: env.py
app/: __init__.py  config.py  main.py
app/models/: job_schema.py
app/routes/: __init__.py  jobs.py
app/services/: __init__.py  auto_apply.py  cover_letter_generator.py  job_scraper.py  matcher.py  resume_parser.py
app/utils/: __init__.py  logger.py  vectorstore.py
automation/: __init__.py  linkedin_bot.py
backend/: Dockerfile  config.py  main.py  requirements.txt
backend/agents/: analysis_agent.py  application_agent.py  auto_apply_agent.py  auto_apply_agent_clean.py  autoagenthire_bot.py  job_search_agent.py  linkedin_automation_agent.py  linkedin_bot.py  orchestrator.py  tools.py
backend/api/: autoagenthire.py  linkedin_integration.py
backend/app/: main.py
backend/automation/: linkedin_auto_apply.py
backend/database/: models.py  schemas.py
backend/llm/: gemini_service.py  openai_client.py
backend/middleware/: custom.py
backend/models/: domain.py
backend/orchestration/: orchestrator.py
backend/parsers/: resume_parser.py
backend/rag/: vector_store.py
backend/routes/: agent.py  api_routes.py
backend/services/: __init__.py  autoagent_linkedin.py  job_service.py
backend/tests/: test_main.py  test_resume_parser.py
config/: settings.py
data/: applications.json
data/job_listings/: .gitkeep
data/resumes/: .gitkeep
data/templates/: cover_letter_template.txt
database/: init.sql
deployment/kubernetes/: backend-deployment.yaml  config-and-services.yaml
docker/: Dockerfile.backend  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  USER_GUIDE.md
frontend/: package.json
frontend/autoagenthire/: index.html
frontend/public/: index.html
frontend/react/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  (+1 more)
public/: index.html
reports/: session_20251014_213310.json  session_20251014_213447.json  session_20251014_214353.json  session_20251014_214440.json  session_20251014_214729.json
scripts/: create_init_files.sh  dev-setup.sh  run_autoagenthire_complete.py  run_backend.sh  run_direct.py  run_robust.py  run_working.py  setup.sh  setup_db.py  show_status.py  start.sh  startup.bat  test_components.py  validate_structure.py  verify_setup.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_automation.py  test_basic.py  test_simple.py
(+71 files in other folders)
